.metadata/.plugins/org.eclipse.cdt.ui/Dho2.build.log
16:17:18 **** Incremental Build of configuration Debug for project Dho2 ****
make all 
Building file: ../src/Fum.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Fum.d" -MT"src/Fum.o" -o "src/Fum.o" "../src/Fum.c"
../src/Fum.c:6:8: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
extern FumToVbmMsg(uint32_t mn, uint32_t mh);
~~~~~~ ^
../src/Fum.c:7:8: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
extern FumToRamMsg(uint32_t mn, uint32_t mh);
~~~~~~ ^
../src/Fum.c:23:2: error: use of undeclared identifier 'check2Vbm'; did you mean 'check2'?
        check2Vbm=true;
        ^~~~~~~~~
        check2
../src/Common.h:24:13: note: 'check2' declared here
static bool check2 = false;
            ^
../src/Fum.c:75:6: error: use of undeclared identifier 'check2Vbm'; did you mean 'check2'?
        if (check2Vbm){
            ^~~~~~~~~
            check2
../src/Common.h:24:13: note: 'check2' declared here
static bool check2 = false;
            ^
../src/Fum.c:76:3: error: use of undeclared identifier 'check2Vbm'; did you mean 'check2'?
                check2Vbm=false;
                ^~~~~~~~~
                check2
../src/Common.h:24:13: note: 'check2' declared here
static bool check2 = false;
            ^
2 warnings and 3 errors generated.
make: *** [src/Fum.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

16:17:18 Build Failed. 4 errors, 2 warnings. (took 348ms)

